kubernetes/kustomize/other/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: vulnerability-assessment-tool
  labels:
    name: vulnerability-assessment-tool
